[package]
name = "jestas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
config = { version = "0.11.0", features = ["toml", "yaml", "json"] }
fuzzy-matcher = "0.3.7"
#async-trait = "0.1.51"
#error-chain = "0.12.4"
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
shellexpand = "2.1.0"
#tokio = { version = "1.13.0", features = ["full"] }
